[package]
name = "bi5"
version = "0.2.2"
edition = "2021"
description = "Parse bi5 tick files"
license = "MIT"
readme = "README.md"
changelog = "Changelog.md"
homepage = "https://github.com/mayeranalytics/bi5"
repository = "https://github.com/mayeranalytics/bi5"
documentation = "https://docs.rs/crate/bi5/latest"
keywords = ["parse", "bi5"]
categories = ["command-line-utilities"]

[[bin]]
name = "catbi5"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lzma-rs = "0.3"
chrono = "0.4"
binread = "2.2"
anyhow = "1.0"
walkdir = "2.3"
